--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Title</h1>
-    <div class="container">
-        <p>Paragraph number - 1</p>
-        <p>Paragraph number - 2</p>
-        <p>Paragraph number - 3</p>
-        <p>Paragraph number - 4</p>
-        <p>Paragraph number - 5</p>
+    <div class="menu">
+        <div class="menu-item" id="item-1">
+            <img src="/Images/sandwich.jpg">
+            <p>Sandwich</p>
+        </div>
+        <div class="menu-item" id="item-2">
+            <img src="/Images/pizza.jpg">
+            <p>Pizza</p>
+        </div>
+        <div class="menu-item" id="item-3">
+            <img src="/Images/icecream.jpg">
+            <p>Icecream</p>
+        </div>
+        <div class="menu-item" id="item-4">
+            <img src="/Images/salad.jpg">
+            <p>Salad</p>
+        </div>
+        <div class="menu-item" id="item-5">
+            <img src="/Images/coke.jpg">
+            <p>Coke</p>
+            <div class="info">O</div>
+        </div>
+        <div id="title">
+            <h1>Menu</h1>
+            <img src="image.jpg">
+        </div>
     </div>
 </body>
 </html>
