Did full reset of basic index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,31 +9,15 @@
 </head>
 <body>
     <div class="menu">
-        <div class="menu-item" id="item-1">
-            <img src="/Images/sandwich.jpg">
+        <div class="menu-item" id="sandwich">
             <p>Sandwich</p>
+            <img src="/Images/sandwich.jpg">
         </div>
-        <div class="menu-item" id="item-2">
-            <img src="/Images/pizza.jpg">
-            <p>Pizza</p>
-        </div>
-        <div class="menu-item" id="item-3">
-            <img src="/Images/icecream.jpg">
-            <p>Icecream</p>
-        </div>
-        <div class="menu-item" id="item-4">
-            <img src="/Images/salad.jpg">
-            <p>Salad</p>
-        </div>
-        <div class="menu-item" id="item-5">
-            <img src="/Images/coke.jpg">
+        <div class="menu-item" id="coke">
             <p>Coke</p>
-            <div class="info">O</div>
-        </div>
-        <div id="title">
-            <h1>Menu</h1>
-            <img src="image.jpg">
+            <img src="/Images/coke2.jpg">
+            <div id="coke-info"><p>Hello</p></div>
         </div>
     </div>
-</body>
+    </body>
 </html>
