--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="menu-item" id="coke">
             <p>Coke</p>
             <img src="/Images/coke2.jpg">
-            <div id="coke-info"><p>Hello</p></div>
+            <div class="info"><p>Hello</p></div>
         </div>
     </div>
     </body>
