Created second tester page Made base site

--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,14 +11,16 @@
     <div class="menu">
         <div class="menu-item" id="sandwich">
             <p>Sandwich</p>
-            <img src="/Images/sandwich.jpg">
-            <div class="info"><p>Goodbye</p></div>
+            <!--<img src="/Images/sandwich.jpg">-->
         </div>
         <div class="menu-item" id="coke">
             <p>Coke</p>
-            <img src="/Images/coke2.jpg">
-            <div class="info"><p>Hello</p></div>
+            <!--<img src="/Images/coke.jpg">-->
+        </div>
+        <div class="menu-item" id="pizza">
+            <p>Pizza</p>
+            <!--<img src="/Images/pizza.jpg">-->
         </div>
     </div>
-    </body>
+</body>
 </html>
