--- a/index2.html
+++ b/index2.html
@@ -8,19 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="menu">
-        <div class="menu-item" id="sandwich">
-            <p>Sandwich</p>
-            <!--<img src="/Images/sandwich.jpg">-->
-        </div>
-        <div class="menu-item" id="coke">
-            <p>Coke</p>
-            <!--<img src="/Images/coke.jpg">-->
-        </div>
-        <div class="menu-item" id="pizza">
-            <p>Pizza</p>
-            <!--<img src="/Images/pizza.jpg">-->
-        </div>
+    <div class="menu-item">
+        <p>Sandwich</p>
     </div>
 </body>
 </html>
