Changed images Made basic cards Changes liveserver port

--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style2.css">
     <meta charset="UTF-8">
@@ -7,9 +8,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="menu-item">
-        <p>Sandwich</p>
+    <div class="menu">
+        <div class="menu-item" id="sandwich">
+            <p>Sandwich</p>
+            <img src="/Images/sandwich.jpg" width="100px" height="100px">
+        </div>
+        <div class="menu-item" id="pizza">
+            <p>Pizza</p>
+            <img src="/Images/pizza.jpg" width="100px" height="100px">
+        </div>
+        <div class="menu-item" id="salad">
+            <p>Salad</p>
+            <img src="/Images/salad.jpg" width="100px" height="100px">
+        </div>
+        <div class="menu-item" id="coke">
+            <p>Coke</p>
+            <img src="/Images/coke.jpg" width="100px" height="100px">
+        </div>
+        <div class="menu-item" id="water">
+            <p>Water</p>
+            <img src="/Images/water.jpg" width="100px" height="100px">
+        </div>
+        <div class="menu-item" id="icecream">
+            <p>Icecream</p>
+            <img src="/Images/icecream.png" width="100px" height="100px">
+        </div>
+        <div class="menu-item" id="cake">
+            <p>Cake</p>
+            <img src="/Images/cake.jpg" width="100px" height="100px">
+        </div>
     </div>
 </body>
+
 </html>
