Made text move up on hover

--- a/index2.html
+++ b/index2.html
@@ -12,31 +12,31 @@
 <body>
     <div class="menu">
         <div class="menu-item" id="sandwich">
-            <p>Sandwich</p>
+            <p id="title">Sandwich</p>
             <img src="/Images/sandwich.jpg" width="100px" height="100px">
         </div>
         <div class="menu-item" id="pizza">
-            <p>Pizza</p>
+            <p id="title">Pizza</p>
             <img src="/Images/pizza.jpg" width="100px" height="100px">
         </div>
         <div class="menu-item" id="salad">
-            <p>Salad</p>
+            <p id="title">Salad</p>
             <img src="/Images/salad.jpg" width="100px" height="100px">
         </div>
         <div class="menu-item" id="coke">
-            <p>Coke</p>
+            <p id="title">Coke</p>
             <img src="/Images/coke.jpg" width="100px" height="100px">
         </div>
         <div class="menu-item" id="water">
-            <p>Water</p>
+            <p id="title">Water</p>
             <img src="/Images/water.jpg" width="100px" height="100px">
         </div>
         <div class="menu-item" id="icecream">
-            <p>Icecream</p>
+            <p id="title">Icecream</p>
             <img src="/Images/icecream.png" width="100px" height="100px">
         </div>
         <div class="menu-item" id="cake">
-            <p>Cake</p>
+            <p id="title">Cake</p>
             <img src="/Images/cake.jpg" width="100px" height="100px">
         </div>
     </div>
