Attempted at making description Changed stylesheet formating

--- a/index2.html
+++ b/index2.html
@@ -13,30 +13,43 @@
     <div class="menu">
         <div class="menu-item" id="sandwich">
             <p id="title">Sandwich</p>
+            <p class="description">A BLT sandwich</p>
             <img src="/Images/sandwich.jpg" width="100px" height="100px">
         </div>
+
         <div class="menu-item" id="pizza">
             <p id="title">Pizza</p>
+            <p class="description">A pepperoni pizza</p>
             <img src="/Images/pizza.jpg" width="100px" height="100px">
         </div>
+
         <div class="menu-item" id="salad">
             <p id="title">Salad</p>
+            <p class="description">A basic caesar salad</p>
             <img src="/Images/salad.jpg" width="100px" height="100px">
         </div>
+
         <div class="menu-item" id="coke">
             <p id="title">Coke</p>
+            <p class="description">A bottle of coca-cola</p>
             <img src="/Images/coke.jpg" width="100px" height="100px">
         </div>
+
         <div class="menu-item" id="water">
             <p id="title">Water</p>
+            <p class="description">A bottle of water</p>
             <img src="/Images/water.jpg" width="100px" height="100px">
         </div>
+
         <div class="menu-item" id="icecream">
             <p id="title">Icecream</p>
+            <p class="description">Chocolate icecream</p>
             <img src="/Images/icecream.png" width="100px" height="100px">
         </div>
+
         <div class="menu-item" id="cake">
             <p id="title">Cake</p>
+            <p class="description">A layer cake</p>
             <img src="/Images/cake.jpg" width="100px" height="100px">
         </div>
     </div>
