Added icons Deleted old icecream pic Added icon to salad

--- a/index2.html
+++ b/index2.html
@@ -14,52 +14,46 @@
         <div class="menu-item" id="sandwich">
             <p id="title">Sandwich</p>
             <p class="description">A BLT sandwich</p>
-            <img src="/Images/sandwich.jpg">
+            <img src="/Images/sandwich.jpg" class="picture">
         </div>
 
         <div class="menu-item" id="pizza">
             <p id="title">Pizza</p>
             <p class="description">A pepperoni pizza</p>
-            <img src="/Images/pizza.jpg">
+            <img src="/Images/pizza.jpg" class="picture">
         </div>
 
         <div class="menu-item" id="salad">
             <p id="title">Salad</p>
             <p class="description">A basic caesar salad</p>
-            <img src="/Images/salad.jpg">
+            <img src="/Images/salad.jpg" class="picture">
+            <img src="/Icons/vegetarian.png" class="icon">
         </div>
 
         <div class="menu-item" id="coke">
             <p id="title">Coke</p>
             <p class="description">A bottle of coca-cola</p>
-            <img src="/Images/coke.jpg">
+            <img src="/Images/coke.jpg" class="picture">
         </div>
 
         <div class="menu-item" id="water">
             <p id="title">Water</p>
             <p class="description">A bottle of water</p>
-            <img src="/Images/water.jpg">
+            <img src="/Images/water.jpg" class="picture">
         </div>
 
         <div class="menu-item" id="icecream">
             <p id="title">Icecream</p>
             <p class="description">Chocolate icecream</p>
-            <img src="/Images/icecream.png">
+            <img src="/Images/icecream.png" class="picture">
         </div>
 
         <div class="menu-item" id="cake">
             <p id="title">Cake</p>
             <p class="description">A layer cake</p>
-            <img src="/Images/cake.jpg">
+            <img src="/Images/cake.jpg" class="picture">
         </div>
     </div>
-    <!--
-    <div class="credits">
-        <a href="https://www.flaticon.com/free-icons/vegetarian" title="vegetarian icons">Vegetarian icons created by
-            Pixel perfect - Flaticon
-        </a>
-    </div>
-    -->
 </body>
 
 </html>
