--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <p id="title">Sandwich</p>
             <p class="description">A BLT sandwich</p>
             <img src="/Images/sandwich.jpg" class="picture">
+            <div class="icons">
+                <object data="/Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
+            </div>
         </div>
 
         <div class="menu-item" id="pizza">
@@ -22,7 +25,7 @@
             <p class="description">A pepperoni pizza</p>
             <img src="/Images/pizza.jpg" class="picture">
             <div class="icons">
-                <object data="/Icons/HOLD" width="24" height="24" class="hidden"></object>
+                <object data="/Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
             </div>
         </div>
 
