Added more themes Added clear-background versions of images Added theme selector to main page Moved TEST.zip

--- a/TEST/index.html
+++ b/TEST/index.html
@@ -16,8 +16,13 @@
         provident? Architecto, ex deleniti! Laboriosam placeat laudantium nesciunt doloremque saepe? In inventore
         maiores ipsa officia rem?
     </p>
-    <button id="dark">Dark Mode</button>
-    <button id="light">Light Mode</button>
+
+    <input type="radio" name="theme" value="dark" id="dark">
+    <label for="dark">Dark</label>
+    <input type="radio" name="theme" value="light" id="light">
+    <label for="light">Light</label>
+    <button id="submit">console.log choice</button>
+
     <script src="script.js"></script>
 </body>
 
