--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
 </head>
 
 <body>
+    <link rel="stylesheet" href="style-light.css" id="style">
+
+    <button id="dark">Dark Mode</button>
+    <button id="light">Light Mode</button>
+    <button id="green">Green Mode</button>
+    <button id="blue">Blue Mode</button>
+
     <div class="menu">
         <div class="menu-item" id="sandwich">
             <p id="title">Sandwich</p>
             <p class="description">A BLT sandwich</p>
-            <img src="/Images/sandwich.jpg" class="picture">
+            <img src="/Images/sandwich.png" class="picture">
             <div class="icons">
                 <object data="/Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
             </div>
@@ -23,7 +30,7 @@
         <div class="menu-item" id="pizza">
             <p id="title">Pizza</p>
             <p class="description">A pepperoni pizza</p>
-            <img src="/Images/pizza.jpg" class="picture">
+            <img src="/Images/pizza.png" class="picture">
             <div class="icons">
                 <object data="/Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
             </div>
@@ -32,7 +39,7 @@
         <div class="menu-item" id="salad">
             <p id="title">Salad</p>
             <p class="description">A basic caesar salad</p>
-            <img src="/Images/salad.jpg" class="picture">
+            <img src="/Images/salad.png" class="picture">
 
             <!-- <img src="/Icons/vegan.png" class="icon"> -->
             <div class="icons">
@@ -44,7 +51,7 @@
         <div class="menu-item" id="coke">
             <p id="title">Coke</p>
             <p class="description">A bottle of coca-cola</p>
-            <img src="/Images/coke.jpg" class="picture">
+            <img src="/Images/coke.png" class="picture">
             <div class="icons">
                 <object data="/Icons/vegan.svg" width="24" height="24" class="icon"></object>
                 <object data="/Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
@@ -54,7 +61,7 @@
         <div class="menu-item" id="water">
             <p id="title">Water</p>
             <p class="description">A bottle of water</p>
-            <img src="/Images/water.jpg" class="picture">
+            <img src="/Images/water.png" class="picture">
             <div class="icons">
                 <object data="/Icons/vegan.svg" width="24" height="24" class="icon"></object>
                 <object data="/Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
@@ -74,13 +81,16 @@
         <div class="menu-item" id="cake">
             <p id="title">Cake</p>
             <p class="description">A layer cake</p>
-            <img src="/Images/cake.jpg" class="picture">
+            <img src="/Images/cake.png" class="picture">
             <div class="icons">
                 <object data="/Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
                 <object data="/Icons/vegetarian.svg" width="24" height="24" class="icon"></object>
             </div>
         </div>
     </div>
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
