--- a/TEST/index.html
+++ b/TEST/index.html
@@ -23,6 +23,8 @@
     <label for="light">Light</label>
     <button id="submit">console.log choice</button>
 
+    <p id="output"></p>
+
     <script src="script.js"></script>
 </body>
 
