--- a/secret-page/index.html
+++ b/secret-page/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>THIS IS SUPER SECRET!!!!!!</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae dolores eius perspiciatis laudantium dolorum iusto nostrum est reprehenderit sit suscipit, quaerat dolor ipsum ea fugiat! Cumque dolorem debitis odit voluptatibus.</p>
+    <p>check out how secret this is!!!!!!!</p>
 </body>
 </html>
