Added . to start of src

--- a/menu/index.html
+++ b/menu/index.html
@@ -21,69 +21,69 @@
         <div class="menu-item" id="sandwich">
             <p id="title">Sandwich</p>
             <p class="description">A BLT sandwich</p>
-            <img src="/Images/sandwich.png" class="picture">
+            <img src="./Images/sandwich.png" class="picture">
             <div class="icons">
-                <object data="/Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
+                <object data="./Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
             </div>
         </div>
 
         <div class="menu-item" id="pizza">
             <p id="title">Pizza</p>
             <p class="description">A pepperoni pizza</p>
-            <img src="/Images/pizza.png" class="picture">
+            <img src="./Images/pizza.png" class="picture">
             <div class="icons">
-                <object data="/Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
+                <object data="./Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
             </div>
         </div>
 
         <div class="menu-item" id="salad">
             <p id="title">Salad</p>
             <p class="description">A basic caesar salad</p>
-            <img src="/Images/salad.png" class="picture">
+            <img src="./Images/salad.png" class="picture">
 
             <div class="icons">
-                <object data="/Icons/vegan.svg" width="24" height="24" class="icon"></object>
-                <object data="/Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/vegan.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
             </div>
         </div>
 
         <div class="menu-item" id="coke">
             <p id="title">Coke</p>
             <p class="description">A bottle of coca-cola</p>
-            <img src="/Images/coke.png" class="picture">
+            <img src="./Images/coke.png" class="picture">
             <div class="icons">
-                <object data="/Icons/vegan.svg" width="24" height="24" class="icon"></object>
-                <object data="/Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/vegan.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
             </div>
         </div>
 
         <div class="menu-item" id="water">
             <p id="title">Water</p>
             <p class="description">A bottle of water</p>
-            <img src="/Images/water.png" class="picture">
+            <img src="./Images/water.png" class="picture">
             <div class="icons">
-                <object data="/Icons/vegan.svg" width="24" height="24" class="icon"></object>
-                <object data="/Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/vegan.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
             </div>
         </div>
 
         <div class="menu-item" id="icecream">
             <p id="title">Icecream</p>
             <p class="description">Chocolate icecream</p>
-            <img src="/Images/icecream.png" class="picture">
+            <img src="./Images/icecream.png" class="picture">
             <div class="icons">
-                <object data="/Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
-                <object data="/Icons/vegetarian.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/vegetarian.svg" width="24" height="24" class="icon"></object>
             </div>
         </div>
 
         <div class="menu-item" id="cake">
             <p id="title">Cake</p>
             <p class="description">A layer cake</p>
-            <img src="/Images/cake.png" class="picture">
+            <img src="./Images/cake.png" class="picture">
             <div class="icons">
-                <object data="/Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
-                <object data="/Icons/vegetarian.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/vegetarian.svg" width="24" height="24" class="icon"></object>
             </div>
         </div>
     </div>
