Moved files Deleted green and blue themes Added onclick to menu button

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My Github Page</title>
 </head>
 <body>
     <h1>Nathan3-14's Github Page</h1>
-    <div class="pages">
-
+    <div id="pages">
+        <button id="menu">Menu</p>
     </div>
-    <script src="c"></script>
+    <script src="script.js"></script>
 </body>
 </html>
