--- a/menu/index.html
+++ b/menu/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,8 +14,6 @@
 
     <button id="dark">Dark Mode</button>
     <button id="light">Light Mode</button>
-    <button id="green">Green Mode</button>
-    <button id="blue">Blue Mode</button>
 
     <div class="menu">
         <div class="menu-item" id="sandwich">
@@ -26,7 +24,7 @@
                 <object data="./Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
             </div>
         </div>
-
+        
         <div class="menu-item" id="pizza">
             <p id="title">Pizza</p>
             <p class="description">A pepperoni pizza</p>
