Removed old images Added tea.png Added tea to menu

--- a/menu/index.html
+++ b/menu/index.html
@@ -55,6 +55,16 @@
             </div>
         </div>
 
+        <div class="menu-item">
+            <p id="title">Tea</p>
+            <p class="description">A cup of tea</p>
+            <img src="./Images/tea.png" class="picture">
+            <div class="icons">
+                <object data="./Icons/vegetarian.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
+            </div>
+        </div>
+
         <div class="menu-item" id="water">
             <p id="title">Water</p>
             <p class="description">A bottle of water</p>
