--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1>Nathan3-14's Github Page</h1>
     <div id="pages">
-        <button id="menu">Menu</p>
+        <button id="menu">Menu</p></button>
+        <button id="bcp-shop"><p>BCP Shop</p></button>
     </div>
     <script src="script.js"></script>
 </body>
