deleted old icons

--- a/menu/index.html
+++ b/menu/index.html
@@ -19,10 +19,10 @@
     <button id="light">Light Mode</button>
 
     <div class="menu">
-        <div class="menu-item" id="sandwich">
-            <p id="title">Sandwich</p>
-            <p class="description">A BLT sandwich</p>
-            <img src="./Images/sandwich.png" class="picture">
+        <div class="menu-item" id="pasta_sausage">
+            <p id="title">Sausage Pasta</p>
+            <p class="description">A tomato sauce with sausage</p>
+            <img src="./Images/pasta_sausage.png" class="picture">
             <div class="icons">
                 <object data="./Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
             </div>
@@ -30,7 +30,7 @@
         
         <div class="menu-item" id="pizza">
             <p id="title">Pizza</p>
-            <p class="description">A pepperoni pizza</p>
+            <p class="description"><br>A pepperoni pizza</p>
             <img src="./Images/pizza.png" class="picture">
             <div class="icons">
                 <object data="./Icons/HOLD.svg" width="24" height="24" class="hidden"></object>
@@ -38,9 +38,9 @@
         </div>
 
         <div class="menu-item" id="salad">
-            <p id="title">Salad</p>
-            <p class="description">A basic caesar salad</p>
-            <img src="./Images/salad.png" class="picture">
+            <p id="title">Chocolate Brownie</p>
+            <p class="description"><br>A delicious chocolate brownie</p>
+            <img src="./Images/brownies.png" class="picture">
 
             <div class="icons">
                 <object data="./Icons/vegan.svg" width="24" height="24" class="icon"></object>
@@ -75,26 +75,6 @@
             <div class="icons">
                 <object data="./Icons/vegan.svg" width="24" height="24" class="icon"></object>
                 <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
-            </div>
-        </div>
-
-        <div class="menu-item" id="icecream">
-            <p id="title">Icecream</p>
-            <p class="description">Chocolate icecream</p>
-            <img src="./Images/icecream.png" class="picture">
-            <div class="icons">
-                <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
-                <object data="./Icons/vegetarian.svg" width="24" height="24" class="icon"></object>
-            </div>
-        </div>
-
-        <div class="menu-item" id="cake">
-            <p id="title">Cake</p>
-            <p class="description">A layer cake</p>
-            <img src="./Images/cake.png" class="picture">
-            <div class="icons">
-                <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
-                <object data="./Icons/vegetarian.svg" width="24" height="24" class="icon"></object>
             </div>
         </div>
     </div>
