--- a/menu/index.html
+++ b/menu/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="menu-item" id="salad">
+        <div class="menu-item" id="brownie">
             <p id="title">Chocolate Brownie</p>
             <p class="description"><br>A delicious chocolate brownie</p>
             <img src="./Images/brownies.png" class="picture">
