Implemented theme selection cookies Added basic recipe selector Added basic recipe templated

--- a/menu/recipes/brownie/index.html
+++ b/menu/recipes/brownie/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sausage Pasta</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <h1>Sausage Pasta</h1>
+    <h1>Brownies</h1>
     <h2>Ingredients:</h2>
     <p>lorem</p>
 
