Changed formatting of code Corrected icons on brownies

--- a/menu/index.html
+++ b/menu/index.html
@@ -43,7 +43,7 @@
             <img src="./Images/brownies.png" class="picture">
 
             <div class="icons">
-                <object data="./Icons/vegan.svg" width="24" height="24" class="icon"></object>
+                <object data="./Icons/vegetarian.svg" width="24" height="24" class="icon"></object>
                 <object data="./Icons/gluten-free.svg" width="24" height="24" class="icon"></object>
             </div>
         </div>
