Improved recipe sites

--- a/menu/recipes/pasta_sausage/index.html
+++ b/menu/recipes/pasta_sausage/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+    <link rel="stylesheet" href="style-light.css" id="style">
+
+    <button id="dark">Dark Mode</button>
+    <button id="light">Light Mode</button>
+
+
     <h1>Sausage Pasta</h1>
     <h2>Ingredients:</h2>
     <p>lorem</p>
@@ -17,6 +23,7 @@
     <h2>Instructions</h2>
     <p>lorem</p>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
