--- a/menu/recipes/brownie/index.html
+++ b/menu/recipes/brownie/index.html
@@ -8,6 +8,16 @@
 </head>
 
 <body>
+    <link rel="stylesheet" href="style-light.css" id="style">
+
+    <button id="dark">Dark Mode</button>
+    <button id="light">Light Mode</button>
+    <br>
+    <div id="home_button">
+        <p>Home</p>
+    </div>
+
+
     <h1>Brownies</h1>
     <h2>Ingredients:</h2>
     <p>lorem</p>
@@ -17,6 +27,7 @@
     <h2>Instructions</h2>
     <p>lorem</p>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
