Added home button Added themes to recipe pages

--- a/menu/recipes/pasta_sausage/index.html
+++ b/menu/recipes/pasta_sausage/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sausage Pasta</title>
+    <script src="https://kit.fontawesome.com/b6a2129284.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -12,7 +14,8 @@
 
     <button id="dark">Dark Mode</button>
     <button id="light">Light Mode</button>
-
+    <br>
+    <i class="fa-solid fa-house" id="home_button"></i>
 
     <h1>Sausage Pasta</h1>
     <h2>Ingredients:</h2>
