--- a/menu/recipes/brownie/index.html
+++ b/menu/recipes/brownie/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/b6a2129284.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,9 +15,7 @@
     <button id="dark">Dark Mode</button>
     <button id="light">Light Mode</button>
     <br>
-    <div id="home_button">
-        <p>Home</p>
-    </div>
+    <i class="fa-solid fa-house" id="home_button"></i>
 
 
     <h1>Brownies</h1>
