Added ingredients to the sausage pasta

--- a/menu/recipes/pasta_sausage/index.html
+++ b/menu/recipes/pasta_sausage/index.html
@@ -19,7 +19,15 @@
 
     <h1>Sausage Pasta</h1>
     <h2>Ingredients:</h2>
-    <p>lorem</p>
+    <ul>
+        <li>1 tbsp olive oil</li>
+        </li>packet of 8 pork sausages (the best your budget will allow), cut into chunky pieces</li>
+        <li>1 large onion, chopped</li>
+        <li>2 garlic cloves, crushed</li>
+        <li>1 tsp chilli powder</li>
+        <li>400g can chopped tomatoes<li>
+        <li>300g short pasta such as fusilli or farfalle (just over half a 500g bag)</li>
+    </ul>
 
     <br><br>
 
