--- a/menu/recipes/brownie/index.html
+++ b/menu/recipes/brownie/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brownies</title>
     <script src="https://kit.fontawesome.com/b6a2129284.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,15 +20,34 @@
     <br>
     <i class="fa-solid fa-house" id="home_button"></i>
 
-
     <h1>Brownies</h1>
     <h2>Ingredients:</h2>
-    <p>lorem</p>
+    <ul>
+        <li>1 tbsp olive oil</li>
+        </li>packet of 8 pork sausages (the best your budget will allow), cut into chunky pieces</li>
+        <li>1 large onion, chopped</li>
+        <li>2 garlic cloves, crushed</li>
+        <li>1 tsp chilli powder</li>
+        <li>400g can chopped tomatoes
+        <li>
+        <li>300g short pasta such as fusilli or farfalle (just over half a 500g bag)</li>
+    </ul>
 
     <br><br>
 
     <h2>Instructions</h2>
-    <p>lorem</p>
+    <ol>
+        <li>Put a large pan of water on to boil.</li>
+        <li>Heat 1 tbsp olive oil in a large frying pan and fry chunky pieces of 8 pork sausages on a fairly high heat
+            until they are golden brown all over.</li>
+        <li>Now turn the heat down and add 1 large chopped onion and 2 crushed garlic cloves, cooking them until they
+            have softened.</li>
+        <li>Stir in 1 tsp chilli powder and 400g chopped tomatoes with the sausages, bring the sauce to the boil then
+            turn the heat down and let it bubble for about 10 minutes while you cook the pasta.</li>
+        <li>Drop 300g pasta into the pan of boiling water and cook according to the pack instructions.</li>
+        <li>Drain the pasta, then tip it into the frying pan with the sausage sauce, mixing well to coat. Dish up
+            immediately with crusty bread.</li>
+    </ol>
 
     <script src="script.js"></script>
 </body>
