--- a/magic/index.html
+++ b/magic/index.html
@@ -4,23 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic</title>
+    <title>Mathe-Magic</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Title</h1>
+    <h1>Mathemagic</h1>
     <div class="main">
         <div id="icon-rows"></div>
-        <button id="reveal" class="block">Reveal!</button>
-        <div class="test"></div>
-        <script src="script.js"></script>
-        <dialog id="reveal_modal">
-            <img id="answer" src="/img/banana.png"></img>
-            <br>
-            <button id="hide">Hide</button>
-        </dialog>
     </div>
+    
+    <ol>
+        <li>Pick any two digit number</li>
+        <li>Add together the digits of that number</li>
+        <li>Subtract that from your original number</li>
+        <li>Find the fruit associated with that number</li>
+    </ol>
+    <br>
+
+    <button id="reveal" class="block">Reveal!</button>
+
+    <dialog id="reveal_modal">
+        <img id="answer" src="/img/banana.png"></img>
+        <br>
+        <button id="hide">Hide</button>
+    </dialog>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
