--- a/magic/index.html
+++ b/magic/index.html
@@ -16,7 +16,7 @@
     <div class="main">
         <div id="icon-rows"></div>
     </div>
-    
+
     <ol>
         <li>Pick any two digit number</li>
         <li>Add together the digits of that number</li>
@@ -30,7 +30,7 @@
     <dialog id="reveal_modal">
         <img id="answer" src="/img/banana.png"></img>
         <br>
-        <button id="hide">Hide</button>
+        <button id="hide" class="block-small">Hide</button>
     </dialog>
 
     <script src="script.js"></script>
