Tested automatic link creator

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <h1>Nathan3-14's Github Page</h1>
     <div id="pages">
-        <button id="menu">Menu</p></button>
-        <button id="bcp-shop"><p>BCP Shop</p></button>
+        <button class="link" id="menu">Menu</p></button>
+        <button class="link" id="bcp-shop"><p>BCP Shop</p></button>
+        <button class="link" id="magic"><p>Mathemagic</p></button>
     </div>
     <script src="script.js"></script>
 </body>
