--- a/magic/index.html
+++ b/magic/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="canv">
     <h1>Mathemagic</h1>
     <div class="main">
         <div id="icon-rows"></div>
