--- a/magic/index.html
+++ b/magic/index.html
@@ -12,28 +12,30 @@
 </head>
 
 <body id="canv">
-    <h1>Mathemagic</h1>
-    <div class="main">
-        <div id="icon-rows"></div>
-    </div>
+    <canv id='canv'>
+        <h1>Mathemagic</h1>
+        <div class="main">
+            <div id="icon-rows"></div>
+        </div>
 
-    <ol>
-        <li>Pick any two digit number</li>
-        <li>Add together the digits of that number</li>
-        <li>Subtract that from your original number</li>
-        <li>Find the fruit associated with that number</li>
-    </ol>
-    <br>
-
-    <button id="reveal" class="block">Reveal!</button>
-
-    <dialog id="reveal_modal">
-        <img id="answer" src="/img/banana.png"></img>
+        <ol>
+            <li>Pick any two digit number</li>
+            <li>Add together the digits of that number</li>
+            <li>Subtract that from your original number</li>
+            <li>Find the fruit associated with that number</li>
+        </ol>
         <br>
-        <button id="hide" class="block-small">Hide</button>
-    </dialog>
 
-    <script src="script.js"></script>
+        <button id="reveal" class="block">Reveal!</button>
+
+        <dialog id="reveal_modal">
+            <img id="answer" src="/img/banana.png"></img>
+            <br>
+            <button id="hide" class="block-small">Hide</button>
+        </dialog>
+
+        <script src="script.js"></script>
+    </canv>
 </body>
 
 </html>
