--- a/test.html
+++ b/test.html
@@ -11,6 +11,6 @@
         <p>o</p>
     </div>
     <p>o</p>
-    <script>Document.getElementById("test")</script>
+    <script>Document.getElementById("test").remove()</script>
     </body>
 </html>
