--- a/test.html
+++ b/test.html
@@ -11,6 +11,9 @@
         <p>o</p>
     </div>
     <p>o</p>
-    <script>Document.getElementById("test").remove()</script>
+    <script>
+        const element = Document.getElementById("test");
+        element.remove();
+    </script>
     </body>
 </html>
