--- a/test.html
+++ b/test.html
@@ -13,6 +13,7 @@
     <p>o</p>
     <script>
         const element = Document.getElementById("test");
+        console.log(element);
         element.remove();
     </script>
     </body>
