--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
     </div>
     <p>o</p>
     <script>
+        console.log("started")
         const element = Document.getElementById("test");
         console.log(element);
         element.remove();
