--- a/magic/index.html
+++ b/magic/index.html
@@ -14,28 +14,32 @@
 <body>
     <canvas id="canv" width="32" height="32">
     </canvas>
-        <h1>Mathemagic</h1>
-        <div class="main">
-            <div id="icon-rows"></div>
-        </div>
+    <h1>Mathemagic</h1>
+    <button id="bg_toggle">
+        <img src="svg/lightbulb-on.svg" width="32" height="32" id="toggle" />
+    </button>
+    <div class="main">
+        <div id="icon-rows"></div>
+    </div>
 
-        <ol>
-            <li>Pick any two digit number</li>
-            <li>Add together the digits of that number</li>
-            <li>Subtract that from your original number</li>
-            <li>Find the fruit associated with that number</li>
-        </ol>
+    <ol>
+        <li>Pick any two digit number</li>
+        <li>Add together the digits of that number</li>
+        <li>Subtract that from your original number</li>
+        <li>Find the fruit associated with that number</li>
+    </ol>
+    <br>
+
+    <button id="reveal" class="block">Reveal!</button>
+
+    <dialog id="reveal_modal">
+        <img id="answer" src="/magic/img/banana.png"></img>
         <br>
+        <button id="hide" class="block-small">Hide</button>
+    </dialog>
 
-        <button id="reveal" class="block">Reveal!</button>
 
-        <dialog id="reveal_modal">
-            <img id="answer" src="/magic/img/banana.png"></img>
-            <br>
-            <button id="hide" class="block-small">Hide</button>
-        </dialog>
-
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
