tweaked bg toggle button

--- a/magic/index.html
+++ b/magic/index.html
@@ -9,6 +9,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
     </style>
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://kit.fontawesome.com/9aa6278c15.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,7 +18,11 @@
     </canvas>
     <h1>Mathemagic</h1>
     <button id="bg_toggle">
-        <img src="svg/lightbulb-on.svg" width="32" height="32" id="toggle" />
+        <!-- <img src="svg/lightbulb-on.svg" width="32" height="32" id="toggle" /> -->
+        <span style="font-size: 1.75rem; margin-left: 5px;">
+            <i class="fa-solid fa-lightbulb" style="color: #ffffff;"></i>
+        </span>
+        Toggle Background
     </button>
     <div class="main">
         <div id="icon-rows"></div>
