Made quadratic calculator work

--- a/quad-calc/index.html
+++ b/quad-calc/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Quadratic Equation Generator</h1>
     <div>
-        <input id="1"></input>
-        <input id="2"></input>
-        <input id="3"></input>
+        <input id="1" type="number"></input>
+        <input id="2" type="number"></input>
+        <input id="3" type="number"></input>
         <button id="4">Submit</button>
     </div>
     <p id="output">No output yet</p>
