Made it look a bit better

--- a/quad-calc/index.html
+++ b/quad-calc/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quadratic Equation Generator</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
+    </style>
 </head>
+
 <body>
+    <link id="theme" rel="stylesheet" href="/styles/style-light.css">
     <h1>Quadratic Equation Generator</h1>
     <div>
         <input id="1" type="number" class="num_ins"></input>
         <input id="2" type="number" class="num_ins"></input>
         <input id="3" type="number" class="num_ins"></input>
-        <button id="4">Submit</button>
     </div>
     <p id="output">No output yet</p>
     <script src="script.js"></script>
 </body>
+
 </html>
