Uncommented mozilla Changed location of style to be local to html

--- a/quad-calc/index.html
+++ b/quad-calc/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <link id="theme" rel="stylesheet" href="/styles/style-light.css">
+    <link id="theme" rel="stylesheet" href="./styles/style-light.css">
     <h1>Quadratic Equation Generator</h1>
     <div>
         <input id="1" type="number" class="num_ins"></input>
