--- a/quad-calc/index.html
+++ b/quad-calc/index.html
@@ -13,6 +13,7 @@
 <body>
     <link id="theme" rel="stylesheet" href="./styles/style-light.css">
     <h1>Quadratic Equation Generator</h1>
+    <p>Enter the first three values of the sequence:</p>
     <div>
         <input id="1" type="number" class="num_ins"></input>
         <input id="2" type="number" class="num_ins"></input>
