Testing more functions

--- a/quad-calc/index.html
+++ b/quad-calc/index.html
@@ -20,6 +20,14 @@
         <input id="3" type="number" class="num_ins"></input>
     </div>
     <p id="output">No output yet</p>
+
+    <div>
+        <p>A:</p><input type="number" id="a">
+        <p>B:</p><input type="number" id="b">
+        <p>C:</p><input type="number" id="c">
+        <p id="output_2">No output yet</p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
