Improved file format Improved functionality

--- a/quad-calc/index.html
+++ b/quad-calc/index.html
@@ -16,12 +16,26 @@
     <p>Enter the first three values of the sequence:</p>
     <div>
         <input id="1" type="number" class="num_ins"></input>
+        <label for="1">,</label>
         <input id="2" type="number" class="num_ins"></input>
+        <label for="2">,</label>
         <input id="3" type="number" class="num_ins"></input>
+        <label for="3"></label>
     </div>
-    <p id="output">No output yet</p>
-    
-    <script src="script.js"></script>
+    <p id="output_equation">No output yet</p>
+
+    <div>
+        <input id="a" type="number" class="val_ins"></input>
+        <label for="a">n<sup>2</sup>+</label>
+        <input id="b" type="number" class="val_ins"></input>
+        <label for="b">n+</label>
+        <input id="c" type="number" class="val_ins"></input>
+        <label for="c"></label>
+    </div>
+    <p id="output_sequence">No output yet</p>
+
+    <script src="script_equation.js"></script>
+    <script src="script_sequence.js"></script>
 </body>
 
 </html>
