--- a/quad-calc/index.html
+++ b/quad-calc/index.html
@@ -12,8 +12,10 @@
 
 <body>
     <link id="theme" rel="stylesheet" href="./styles/style-light.css">
+
     <h1>Quadratic Equation Generator</h1>
-    <p>Enter the first three values of the sequence:</p>
+
+    <h3>Enter the first three values of the sequence:</h3>
     <div>
         <input id="1" type="number" class="num_ins"></input>
         <label for="1">,</label>
@@ -22,8 +24,12 @@
         <input id="3" type="number" class="num_ins"></input>
         <label for="3"></label>
     </div>
+
     <p id="output_equation">No output yet</p>
 
+    <br>
+
+    <h3>Enter the equation of the quadratic sequence</h3>
     <div>
         <input id="a" type="number" class="val_ins"></input>
         <label for="a">n<sup>2</sup>+</label>
