Made background background

--- a/info_square/index.html
+++ b/info_square/index.html
@@ -9,9 +9,8 @@
 <body>
     <h1>Title Goes Here</h1>
     <div id="card">
-        <img id="background-img" src="background.jpg">
-        <h2>Weather</h2>
-        <p>1</p>
+        <h2 class="labels" id="title">Weather</h2>
+        <p class="labels">1</p>
     </div>
 </body>
 </html>
