Changed divs Added backdrop effect

--- a/info_square/index.html
+++ b/info_square/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Info Square</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Title Goes Here</h1>
     <div id="card">
-        <h2 class="labels" id="title">Weather</h2>
-        <p class="labels">1</p>
+        <div class="info" id="weather-div">
+            <p class="labels" id="title">Weather</p>
+        </div>
+        <div class="info" id="other-div">
+            <p class="labels">1</p>
+        </div>
     </div>
 </body>
+
 </html>
