Moved js to folder

--- a/info_square/index.html
+++ b/info_square/index.html
@@ -40,8 +40,8 @@
         </div>
     </div>
 
-    <script src="./icon_positions.js"></script>
-    <script src="./select_icons.js"></script>
+    <script src="./scripts/icon_positions.js"></script>
+    <script src="./scripts/select_icons.js"></script>
 </body>
 
 </html>
