Added secrets api key + weather api test

--- a/info_square/index.html
+++ b/info_square/index.html
@@ -42,6 +42,7 @@
 
     <script src="./scripts/icon_positions.js"></script>
     <script src="./scripts/select_icons.js"></script>
+    <script src="./scripts/get_weather.js"></script>
 </body>
 
 </html>
