Fixed mindmaps buttons

--- a/mindmaps/index.html
+++ b/mindmaps/index.html
@@ -10,7 +10,7 @@
     <ul>
         <th>Mindmaps</th>
         <td>
-            <a class="link" id="electricity">Electricity</a>
+            <button class="link" id="electricity">Electricity</button>
         </td> 
     </ul>
 
